                        Current Project Changelog

* Sat Apr 19 2003 John Berninger <johnw@berningeronline.net>
- build bugfixes
- bugfixes for archtab.py, configure.py, api/up2date.py
- scan_channel will simply ignore non-RPM/SRPM files instead of bombing
- scan_channel resets active pointers to fix dependency solving

* Wed Apr 16 2003 John Berninger <johnw@berningeronline.net>
- Hunter: applet fixes look okay.
- added checks to not error out when a scan_channel hits a non-RPM or -SRPM
  file

* Thu Apr 10 2003 Hunter Matthews <thm@duke.edu>
- Removed the obsolete misc.py file
- Renamed arch.py to archtab.py to prevent annoying conflicts.
- JOHN: applet.py had a bug where the original naked arch was used instead of carch
- JOHN: applet.py had an extra return statment at the bottom that would never
  be reached.
- Pulled the unused functions out of archtab - they havent been needed since 
  1.0.x
- Added some of the missing archs and bizzare varients to the archtab.
  What others do we need? Why can't we pull this from rpm itself? PLEASE?

* Thu Apr 10 2003 Hunter Matthews <thm@duke.edu>
- Removed configfile.py
  This was a back port of the python 2.2 ConfigParser.py, and is no longer
  needed.
- Fix comment about "Include" in httpd.conf - conf.d means no edit is 
  needed.
- Removed the command line parsing code from configure.py. 
  current_apache can't use it, cadmin mustn't use it, and cinstall didn't 
  want it.

* Thu Apr  3 2003 Hunter Matthews <thm@duke.edu>
- Somehow we've lost a TON of changelog entries. I'm not sure where they
  went.
- John tagged out 1.5.3 and 1.5.4. I'm getting 1.5.4 out the door tonight.
- From John's tag, the only change I've made is correcting the Makefile 
  and spec to be correct against tigris.org and we use CVS now.

* Thu Oct 31 2002 Hunter Matthews <thm@duke.edu>
- Finished up the cinstall initdb (pysqlite) code path.
  Finished here means "works for me" and has what I think will be needed.